# vector-ecm

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  chunk.py  collection.py  document.py  setting.py
backend/app/routers/: __init__.py  chat.py  collections.py  documents.py  search.py  settings.py
backend/app/schemas/: __init__.py  chat.py  collection.py  document.py  search.py  setting.py
backend/app/services/: __init__.py  chunking.py  document.py  embedding.py  extraction.py  llm.py  search.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_initial_schema.py  002_add_settings.py
frontend/: README.md  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DocumentList.tsx  DocumentUpload.tsx  Layout.tsx  SearchResults.tsx
frontend/src/routes/: Chat.tsx  Documents.tsx  Search.tsx  Settings.tsx
frontend/src/types/: index.ts
